# SegmentationReview

./: .gitignore  CMakeLists.txt  README.md  Thumbs.db
NETReview/: NETReview.py
NETReview/Resources/Icons/: Thumbs.db
NETReview/Resources/UI/: NETReview.ui
NETReviewRecheck/: NETReviewRecheck.py
NETReviewRecheck/Resources/UI/: NETReviewRecheck.ui
ProstaSeg/: CMakeLists.txt  ProstaSeg.py
SegAltReview/: CMakeLists.txt  SegAltReview.py
SegAltReview/Resources/UI/: SegAltReview.ui
SegmentationReview/: README.md  SegmentationReview.py  sandbox.ipynb
SegmentationReview/Resources/UI/: SegmentationReview.ui
Supervision/: Supervision.py  todo.txt
Supervision/Resources/Icons/: Thumbs.db
Supervision/bk/: bk.Supervision.py
pics/: Thumbs.db
